test/mlir/sqrt_bad_case_0.mlir.stderr
test/mlir/sqrt_bad_case_0.mlir:5:8: error: sqrt input must be a float type
  %0 = colgm.sqrt %arg : tensor<i32>
       ^
